One more fix to index.html, removing dup alignment.

--- a/css/tempstyles.css
+++ b/css/tempstyles.css
@@ -19,7 +19,7 @@ We assumed browser defult font size of 16px.
   float: top;
   /* padding-top: 1em;  /* 16px, (16px/16px=1em) */
   /* padding-bottom: 1em;  /* 16px, (16px/16px=1em) */
-  text-align: center;
+  /* text-align: center; */
 }
 .topnav {
   background-color: silver;  /* Nelly changed color */
